syntax="proto3";

package com.distkv.drpc.pb;

option java_package="com.distkv.drpc.pb.generated";
option java_outer_classname="StringProtocol";
option cc_generic_services = true;

enum Status {
    OK = 0;
    KEY_NOT_FOUND = 1;
    UNKNOWN_ERROR = 2;
};

message PutRequest {
    string key = 1;
    string value = 2;
};

message PutResponse {
    Status status = 1;
};

message GetRequest {
    string key = 1;
}

message GetResponse {
    Status status = 1;
    string value =2;
};

service DstStringService {
    rpc put(PutRequest) returns (PutResponse);
    rpc get(GetRequest) returns (GetResponse);
}
